broadcaster/base/deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: broadcaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broadcaster
  strategy:
    canary:
      steps:
        - setWeight: 50
        - analysis:
            templates:
            - templateName: cpu-usage-broadcaster
  template:
    metadata:
      labels:
        app: broadcaster
    spec:
      containers:
        - name: broadcaster
          image: TODOBROADCASTER/IMAGE
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "75m"
              memory: "10Mi"
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 8006
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 8006
