broadcaster/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-todo-ingress
spec:
  rules:
  - http:
      paths:
      - path: /broadcaster
        pathType: Prefix
        backend:
          service:
            name: broadcaster-svc
            port:
              number: 8006
